<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anda_memesan"
                android:layout_margin="10dp"/>

            <TextView
                android:textSize="30sp"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textKue"
                android:layout_margin="10dp"/>

            <EditText
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5"
                android:id="@+id/kartuUcapan"
                android:layout_margin="10dp"
                android:hint="@string/tuliskan_ucapan_disini"/>

            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/untuk"
                android:layout_margin="10dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/listUntuk"
                android:layout_margin="10dp"/>

            <TextView
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_margin="10dp"/>

            <EditText
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDari"
                android:hint="@string/nama_pengirim"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:id="@+id/submit"
                android:drawableEnd="@drawable/ic_arrow_forward_white_24dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:drawableRight="@drawable/ic_arrow_forward_white_24dp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>